<resources>
    <string name="app_name">Chat Firebase</string>
    <string name="sign_in">Não tem uma conta? Crie aqui.</string>
    <string name="login">Entrar</string>
    <string name="email_hint">E-mail</string>
    <string name="hint_password">Password</string>
    <string name="insert">Cadastrar</string>
    <string name="name_hint">Nome</string>
    <string name="photo">Foto</string>
    <string name="contacts">Contatos</string>
    <string name="logout">Logout</string>
    <string name="btn_chat">Enviar</string>
    <string name="message">Mensagem</string>
</resources>